# -n-C-S-HUTECH-13.6.2026

./: .gitignore  README.md  USAGE_GUIDE.md
dashboard/: index.html
dashboard/css/: style.css
dashboard/js/: app.js
hszr-iot/: README.md  platformio.ini
hszr-iot/src/: main.cpp
hszr-mbi/: Cargo.toml  config.json
hszr-mbi/src/: config.rs  injector.rs  main.rs  modbus.rs  reporter.rs  scanner.rs
hszr-scada/: config.yaml  hszr-scada.service  requirements.txt
hszr-scada/src/: alert_reader.py  api.py  config.py  main.py  modbus_master.py
suricaraSCADA/: setup.sh  suricata.yaml
suricaraSCADA/rules/: modbus.rules
